--- a/platformio.ini
+++ b/platformio.ini
@@ -16,12 +16,9 @@ extra_scripts = pre:pre-build-script.py
 monitor_speed = 115200
 monitor_dtr = 0
 monitor_rts = 0
-
 build_unflags = -std=gnu++11
-
-; -D build options are for TFT_eSPI so that UserSetup.h does not need to be read
-
 build_flags = 
-  -std=gnu++17
-    -D ARDUINO_USB_MODE=1
-    -D ARDUINO_USB_CDC_ON_BOOT=1
+	-std=gnu++17
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+lib_deps = greiman/SdFat@^2.2.2
